--- a/AlbumSiteV3.html
+++ b/AlbumSiteV3.html
@@ -5,9 +5,6 @@
 li {
   border-bottom: 1px dashed black;
 }
-body { 
-	background-color: lightblue;
-}
 a {
     text-decoration: none;
   }
@@ -22,6 +19,9 @@ a:visited {
  		color: #FF00001; 
 	} 
 </style>
+	<link href="AlbumStyles.css"   
+	      rel="stylesheet"      
+	      type="text/css" />
 </head>
 <body>
 	<div style="text-align: center;">
