--- a/AlbumSiteV3.html
+++ b/AlbumSiteV3.html
@@ -19,7 +19,7 @@ a:visited {
  		color: #FF00001; 
 	} 
 </style>
-	<link href="AlbumStyles.css"   
+	<link href="AlbumStyle.css"   
 	      rel="stylesheet"      
 	      type="text/css" />
 </head>
